add autotools files to .cvsignore
git-svn-id: http://svn.ghostscript.com/jbig2dec/trunk@52 ded80894-8fb9-0310-811b-c03f3676ab4d

--- a/.cvsignore
+++ b/.cvsignore
@@ -1,4 +1,13 @@
+Makefile
+Makefile.in
+configure
+config.h
+config.h.in
+stamp-h
+stamp-h.in
+install-sh
 jbig2dec
 test_huffman
 test_arith
 test_png
+test_pbm
