add segment routines in a separate file. prune the semi-dead jbig2dec.h in favor of jbig2.h and jbig2_priv.h. Update to C99 fixed-width types.
git-svn-id: http://svn.ghostscript.com/jbig2dec/trunk@64 ded80894-8fb9-0310-811b-c03f3676ab4d

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,10 +1,11 @@
-# $Id: Makefile.am,v 1.2 2002/05/08 02:36:04 giles Exp $
+# $Id: Makefile.am,v 1.3 2002/06/15 16:02:53 giles Exp $
 ## process this file with automake to generate Makefile.in
 
 lib_LIBRARIES = libjbig2dec.a
 
 libjbig2dec_a_SOURCES = jbig2.c \
 	jbig2_arith.c jbig2_arith_int.c jbig2_huffman.c \
+	jbig2_segment.c jbig2_page.c \
 	jbig2_symbol_dict.c \
 	jbig2_generic.c jbig2_mmr.c \
 	jbig2_image.c jbig2_image_pbm.c
@@ -14,5 +15,3 @@ bin_PROGRAMS = jbig2dec
 
 jbig2dec_SOURCES = jbig2dec.c
 jbig2dec_LDADD = libjbig2dec.a @LIBOBJS@
-
-
