--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-# $Id: Makefile.am,v 1.3 2002/06/15 16:02:53 giles Exp $
+# $Id: Makefile.am,v 1.4 2002/06/20 15:42:47 giles Exp $
 ## process this file with automake to generate Makefile.in
 
 lib_LIBRARIES = libjbig2dec.a
@@ -6,7 +6,7 @@ lib_LIBRARIES = libjbig2dec.a
 libjbig2dec_a_SOURCES = jbig2.c \
 	jbig2_arith.c jbig2_arith_int.c jbig2_huffman.c \
 	jbig2_segment.c jbig2_page.c \
-	jbig2_symbol_dict.c \
+	jbig2_symbol_dict.c jbig2_text.c \
 	jbig2_generic.c jbig2_mmr.c \
 	jbig2_image.c jbig2_image_pbm.c
 
