Replace (optional) linking to the openssl implementation of SHA-1, which is not GPL compatible with a native implementation based on Steve Reid's public domain implementation from sea-to-sky.net. Our version remains public domain, but now requires our autotools-generated headers.
git-svn-id: http://svn.ghostscript.com/jbig2dec/trunk@146 ded80894-8fb9-0310-811b-c03f3676ab4d

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-# $Id: Makefile.am,v 1.8 2002/07/17 13:59:47 giles Exp $
+# $Id: Makefile.am,v 1.9 2002/07/20 16:02:24 giles Exp $
 ## process this file with automake to generate Makefile.in
 
 lib_LIBRARIES = libjbig2dec.a
@@ -10,12 +10,15 @@ libjbig2dec_a_SOURCES = jbig2.c \
 	jbig2_generic.c jbig2_mmr.c \
 	jbig2_image.c jbig2_image_pbm.c
 
-bin_PROGRAMS = jbig2dec
+bin_PROGRAMS = jbig2dec test_sha1
 #noinst_PROGRAMS = test_huffman test_arith
 
-jbig2dec_SOURCES = jbig2dec.c
+jbig2dec_SOURCES = jbig2dec.c sha1.c
 jbig2dec_LDADD = libjbig2dec.a @LIBOBJS@
+
+test_sha1_SOURCES = sha1.c
+test_sha1_CFLAGS = -DTEST
 
 MAINTAINERCLEANFILES = config_types.h.in
 
-TESTS = test_jbig2dec.py
+TESTS = test_sha1 test_jbig2dec.py
