--- a/configure.ac
+++ b/configure.ac
@@ -4,10 +4,10 @@ AC_INIT([jbig2dec], [0.1], [jbig2-dev@ghostscript.com])
 AC_PREREQ(2.53)
 AC_CONFIG_SRCDIR([jbig2dec.c])
 
-AM_INIT_AUTOMAKE([AC_PACKAGE_NAME], [AC_PACKAGE_VERSION])
+AM_INIT_AUTOMAKE
 AM_CONFIG_HEADER(config.h)
 
-AC_REVISION([$Revision: 1.11 $])
+AC_REVISION([$Revision: 1.12 $])
 
 # Checks for programs.
 AC_PROG_CC
