Add Theo deRaadt's portable (v)snprintf implementation for portability, under the BSD license, including advertising. A simple check was added to the configure script, but no prototypes, so it may not help any on systems without the functions.
Submission from Jouk Jansen to allow compilation into Ghostscript on OpenVMS.

(recommitted after repository became corrupt. original change date Wed May  7 04:17:39 2003)


git-svn-id: http://svn.ghostscript.com/jbig2dec/trunk@250 ded80894-8fb9-0310-811b-c03f3676ab4d

--- a/configure.ac
+++ b/configure.ac
@@ -117,6 +117,10 @@ AC_C_BIGENDIAN
 
 # Checks for library functions.
 AC_FUNC_MEMCMP
+dnl we use realloc() but don't depend on the zero-lenght behavior
+dnl tested by AC_FUNC_REALLOC
+AC_REPLACE_FUNCS([snprintf])
+
 AC_CHECK_FUNCS([memset strdup])
 
 dnl use our included getopt if the system doesn't have getopt_long()
