--- a/configure.ac
+++ b/configure.ac
@@ -117,7 +117,7 @@ AC_C_BIGENDIAN
 
 # Checks for library functions.
 AC_FUNC_MEMCMP
-dnl we use realloc() but don't depend on the zero-lenght behavior
+dnl we use realloc() but don't depend on the zero-length behavior
 dnl tested by AC_FUNC_REALLOC
 AC_REPLACE_FUNCS([snprintf])
 
